fix line alignment + review fixes

--- a/src/app/shared/components/drag-and-drop-tree/drag-and-drop-tree.component.scss
+++ b/src/app/shared/components/drag-and-drop-tree/drag-and-drop-tree.component.scss
@@ -150,8 +150,12 @@ app-details-page-link {
 .root-node .child-of-root::before {
   top: -40px;
   width: 1px;
-  height: calc(100% + 17px); //calc(var(--spacing) + 1px);
+  height: calc(100% + 17px);
   border-left: 2px solid $color-primary-20;
+}
+
+.root-node .child-of-root:last-child::before {
+  top: -43px;
 }
 
 //Place line left of each node
